fixing blurry text by turning opacity into 1 once again while goalList gets hovered

--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,10 @@ body {
   transition: 0.2s ease-out;
 }
 
+.goalList:hover {
+  opacity: 1;
+}
+
 .down-layer:hover .goalList {
   transform: translate(4%, 11%);
 }
